ajout de ma couleur favorite dans la balise p

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1> Voici une simple page web pour le cours App Web </h1>
     <p> Bonjour a vous tous! </p>
+    <p>Je nai pas de couleur preferee</p>
 </body>
 </html>
